<resources>
    <string-array name="countries_array">
        <item>Albania</item>
        <item>Austria</item>
        <item>Belgium</item>
        <item>Bulgaria</item>
        <item>Croatia</item>
        <item>Denmark</item>
        <item>Finland</item>
        <item>France</item>
        <item>Germany</item>
        <item>Great Britain</item>
        <item>Greece</item>
        <item>Italy</item>
        <item>Macedonia</item>
        <item>Montenegro</item>
        <item>Romania</item>
        <item>Russia</item>
        <item>Serbia</item>
        <item>Slovenia</item>
        <item>Spain</item>
        <item>Sweden</item>
        <item>The Netherlands</item>
    </string-array>
    <string name="jan">Jan</string>
    <string name="feb">Feb</string>
    <string name="mar">Mar</string>
    <string name="apr">Apr</string>
    <string name="may">May</string>
    <string name="jun">Jun</string>
    <string name="jul">Jul</string>
    <string name="aug">Aug</string>
    <string name="sep">Sep</string>
    <string name="oct">Oct</string>
    <string name="nov">Nov</string>
    <string name="dec">Dec</string>
    <string name="back">Back...</string>
    <string name="holidays">Holidays</string>
    <string name="clickhere">Click Here...</string>
    <string name="countries">Countries</string>
    <string name="countries2">countries</string>
    <string name="about">About</string>
    <string name="about2">about</string>
    <string name="naslov">Welcome...</string>
    <string name="about_main">aTrip2Europe is a simple application, containing short information about a few countries in Europe, together with a list of their national holidays (minus variable day holidays like Easter). So if you are planning a trip across Europe, this compact app might come in handy. To learn about an ongoing holiday with an interesting celebration, or an amusing historical fact and a place to visit, aTrip2Europe does it all :))</string>
    <string name="about_author">Also this is my first published Android application, so I would appreciate Your support. For any bugs, or compliments contact me at Twitter or Facebook. Thank You!</string>
    	<string name="alb_name">Albania</string>
        <string name="aus_name">Austria</string>
        <string name="belg_name">Belgium</string>
        <string name="bul_name">Bulgaria</string>
        <string name="cro_name">Croatia</string>
        <string name="den_name">Denmark</string>
        <string name="fin_name">Finland</string>
        <string name="fra_name">France</string>
        <string name="ger_name">Germany</string>
        <string name="gbr_name">Great Britain</string>
        <string name="grc_name">Greece</string>
        <string name="ita_name">Italy</string>
        <string name="mac_name">Macedonia</string>
        <string name="mon_name">Montenegro</string>
        <string name="rom_name">Romania</string>
        <string name="rus_name">Russia</string>
        <string name="ser_name">Serbia</string>
        <string name="slo_name">Slovenia</string>
        <string name="spa_name">Spain</string>
        <string name="swe_name">Sweden</string>
        <string name="net_name">The Netherlands</string>
        <string name="alb_1">Awaking Sleeping Beauty - like in the 1990s from her hardline communist isolation, Albania was a stranger from another time. Her cities weren\'t choked by car fumes, her beaches were unspoilt by mass tourism, her long-suffering people were a little dazed and confused. While things have changed a lot since then, this ancient land still offers something increasingly rare in Europe  these days \- a glance into a culture that is all its own. Raised on a diet of separation and hardship, Albania is distinctly Albanian.</string>
        <string name="alb_2">You\'ll continue to find beautiful pristine beaches on parts of the Ionian Coast (try the charming town of Saranda), fascinating classical sites like ancient Berat, and dramatic mountain citadels, but the mad traffic of Tirana is symptomatic of a bustling, bright city shrugging off its Stalinist grey patina. Squat toilets are no longer the norm and you can even sip cocktails at hip bars while listening to rock bands. Meanwhile, Northern Albania keeps the country\'s reputation as a wild frontier alive and well, with bleak mountains and the occasional blood feud. Not just the preserve of the adventurous, Albania is a warm and sincerely hospitable country \- with enough rough edges to keep it interesting.</string>
        <string name="aus_1">Vienna\'s jewel-box palaces and Mozart melodies, sparkling Alps and problems like Maria naturally still have their place in Austria\'s heart. But venture further for experiences that defy expectations: from slinging on a backpack to stride through the Tennengebirge\'s lunar landscape to slurping cider with grizzled farmers in Mostviertel orchards, from catapulting down the jaw-dropping Harakiri in Mayrhofen to bathing in Salzkammergut\'s tingly lakes. Visit historic spa towns like Bad Ischl or discover cities such as Linz, where a newfound street cred is adding a twist to Austria\'s tale. So cast aside the well-thumbed picture-book, as the real story is even more enchanting…</string>
        <string name="aus_2">Austria flaunts its heritage in exuberant fashion. Vienna\'s bombastic Habsburg palaces and Salzburg\'s baroque splendour are worthy, but dig deeper and you’ll unearth Stone Age settlements, Roman archaeological sites at Carnuntum  and medieval festivals. In the country where Mozart composed and Strauss taught the world to twirl, you won\'t need to search hard for culture - it waltzes right up to you. </string>
        <string name="bel_1">At long last Belgium, it seems, has come of age. This little country recently celebrated its 175th anniversary of independence and, following several years of big, bold moves to shake off a mousy image, life is now on a pretty even keel. Sure, there are ups (tennis greats) and downs (don\'t mention the Red Devils or national debt), but most Belgians are more than happy with their spot in the world, and wouldn\'t change it for quids.</string>
        <string name="bel_2">For a hearty dose of the medieval architecture and atmosphere in time-capsule condition, Bruges is a lovely spot, despite the fact that hoards of tourists would agree. Brussels and Antwerp are both dynamic cities, or scale down the pace a touch in Ghent, once a medieval city to rival Paris and today one of the swingingest towns in Belgium...</string>
        <string name="bul_1">Five centuries subjugated to Ottoman rule and, more recently, four decades locked very firmly behind the Iron Curtain turned Bulgaria into a distant, enigmatic country in the eyes of much of the rest of the world. Images of cheap wine downed at student house parties, budget ski holidays and umbrella-wielding Cold War assassins were once among the popular stereotypes, but Bulgaria today is a vastly different country from what it was even 10 years ago. </string>
        <string name="bul_2">For most foreign holidaymakers, Bulgaria\'s main lure is its long, sandy Black Sea Coast - which still boasts swaths of stunning beaches and picturesque bays despite the expansive construction work - but there is so much more to this country, and so much of it remains largely untouched and unvisited by overseas tourists. Networks of well-maintained hiking trails and horse-riding routes allow you to discover Bulgaria\'s lush mountainous and forested landscapes, especially around the Rila and Pirin Mountains, inhabited by bears, lynx, rare birds and other kinds of wildlife now becoming scarce elsewhere in Europe. </string>
        <string name="cro_1">Despite the hype, Croatia\'s pleasures are more timeless than trendy. Along its 1778km coastline, a glistening sea winds around rocky coves, lapping at pine-fringed beaches. Istrian ports bustle with fishermen while children dive into the sparkling water. In Dalmatia, cities throb with nightlife amid ancient Roman ruins.</string>
        <string name="cro_2">Yachts glide up the coast, movie stars discreetly arrange to buy one of Croatia\'s 1185 islands and no Mediterranean cruise is complete without a stop in Dubrovnik. The interior landscape is as beguiling, even though less visited. Soak in a thermal spa at Istarske Toplice in Istria. Hike through pristine forests watered by mountain streams in the west. Let the waterfalls of Plitvice moisten your face. And then there\'s the culture. The country that endured Roman, Venetian, Italian and Austro-Hungarian rule has a unique and slightly schizoid identity. You\'ll find a strong central European flavour in the baroque architecture of Zagreb, and Italian devotion to the good life percolates up from the coast, permeating Croatian food and style. During holidays and festivals the country\'s Slavic soul emerges, as colourfully costumed dancers whirl about to traditional folk melodies.</string>
        <string name="den_1">The Danes are, overwhelmingly, a happy bunch. In fact, if you believe those contentment surveys that come out every couple of years, Denmark is one of the happiest nations on earth with some of the best quality of life. Along winding cobbled streets Danes shop and dine at some of the most exciting places in Europe. Copenhagen\'s restaurants have more Michelin stars than any other Scandinavian city, and Denmark as a whole would doubtless have more still if the inspectors from Michelin ever troubled themselves to leave the capital and head for Aalborg or Arhus and around. Even standards in a workaday Danish cafe are generally very high. </string>
        <string name="den_2">Beyond the capital and the bigger cities, Denmark offers a mix of lively towns such as Ribe and Odense  plus rural countryside, medieval churches, Renaissance castles and tidy 18th-century villages. Neolithic dolmen, preserved 2000-year-old \'bog people\', and impressive Viking ruins are just some of the remnants of the nation\'s long and fascinating history.</string>
        <string name="fin_1">There\'s something pure in the Finnish air and spirit that\'s incredibly vital and exciting. Although socially and economically it is in the vanguard of nations, parts of the country remain gloriously remote. With the trendsetting modern capital of Helsinki counterbalanced by vast forested wildernesses in the north and east, like Lemmenjoki National Park and Oulanka National Park. These wilds are perfect for treks among the pines and lakes in summer. And who\'d have thought that so far north you could have such a summer?</string>
    <string name="newyear">New Years Day</string>
	<string name="labour">Labour Day</string>
	<string name="assumption">Assumption of Mary</string>
	<string name="xmas">Christmas Day</string>
	<string name="nationalday">National Day</string>
	<string name="victory">Victory Day</string>
	<string name="reformation">Reformation Day</string>
	<string name="liberation">Liberation Day</string>
	<string name="vodici">Baptism of Jesus</string>
	<string name="kirilmetodi">St Kiril i Metodij</string>
	<string name="ilinden">Ilinden</string>
	<string name="revolutionary">Revol. Struggle Day</string>
	<string name="revolution">Revolution Day</string>
	<string name="kliment">St Kliment Ohridski</string>
	<string name="woman">Womans Day</string>
	<string name="defenderfather">Defenders of the Fatherland</string>
	<string name="russia">Russia Day</string>
	<string name="unity">Unity Day</string>
	<string name="culture">Culture Day</string>
	<string name="natresistance">National Resistance Day</string>
	<string name="independance">Independance Day</string>
	<string name="teacher">Teachers Day</string>
	<string name="spring">Spring Day</string>
	<string name="nevruz">Nevruz Day</string>
	<string name="fools">April Fools Day</string>
	<string name="teresa">Mother Teresa Day</string>
</resources>