<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:shrinkColumns="*"
    android:stretchColumns="*">

    <TableRow>
        <TextView
            android:layout_column="2"
            android:text="@string/mac_name"
            android:padding="3dip"
            android:textSize="20px" />
    </TableRow>
    <View
        android:layout_height="2dip"
        android:background="#FF909090" />

    <TableRow>
        <TextView
            android:text="@string/jan"
            android:padding="3dip" />
        <TextView
            android:text="1"
            android:padding="3dip" />
        <TextView
            android:text="@string/newyear"
            android:gravity="right"
            android:padding="3dip" />
    </TableRow>
    
    <View
        android:layout_height="2dip"
        android:background="#FF909090" />

    <TableRow>
        <TextView
            android:text="@string/jan"
            android:padding="3dip" />
        <TextView
            android:text="7"
            android:padding="3dip" />
        <TextView
            android:text="@string/xmas"
            android:gravity="right"
            android:padding="3dip" />
    </TableRow>
    <View
        android:layout_height="2dip"
        android:background="#FF909090" />
        
    <TableRow>
        <TextView
            android:text="@string/jan"
            android:padding="3dip" />
        <TextView
            android:text="19"
            android:padding="3dip" />
        <TextView
            android:text="@string/vodici"
            android:gravity="right"
            android:padding="3dip" />
    </TableRow>
    
    <View
        android:layout_height="2dip"
        android:background="#FF909090" />

        
    <TableRow>
        <TextView
            android:text="@string/mar"
            android:padding="3dip" />
        <TextView
            android:text="8"
            android:padding="3dip" />
        <TextView
            android:text="@string/woman"
            android:gravity="right"
            android:padding="3dip" />
    </TableRow>
    
    <View
        android:layout_height="2dip"
        android:background="#FF909090" />


    <TableRow>
        <TextView
            android:text="@string/may"
            android:padding="3dip" />
        <TextView
            android:text="1"
            android:padding="3dip" />
        <TextView
            android:text="@string/labour"
            android:gravity="right"
            android:padding="3dip" />
    </TableRow>
    
    <View
        android:layout_height="2dip"
        android:background="#FF909090" />

    <TableRow>
        <TextView
            android:text="@string/may"
            android:padding="3dip" />
        <TextView
            android:text="24"
            android:padding="3dip" />
        <TextView
            android:text="@string/kirilmetodi"
            android:gravity="right"
            android:padding="3dip" />
    </TableRow>
    
    <View
        android:layout_height="2dip"
        android:background="#FF909090" />
    <TableRow>
        <TextView
            android:text="@string/aug"
            android:padding="3dip" />
        <TextView
            android:text="2"
            android:padding="3dip" />
        <TextView
            android:text="@string/ilinden"
            android:gravity="right"
            android:padding="3dip" />
    </TableRow>
    
    <View
        android:layout_height="2dip"
        android:background="#FF909090" />
    <TableRow>
        <TextView
            android:text="@string/sep"
            android:padding="3dip" />
        <TextView
            android:text="8"
            android:padding="3dip" />
        <TextView
            android:text="@string/independance"
            android:gravity="right"
            android:padding="3dip" />
    </TableRow>
    
    <View
        android:layout_height="2dip"
        android:background="#FF909090" />
    <TableRow>
        <TextView
            android:text="@string/oct"
            android:padding="3dip" />
        <TextView
            android:text="11"
            android:padding="3dip" />
        <TextView
            android:text="@string/revolution"
            android:gravity="right"
            android:padding="3dip" />
    </TableRow>
    
    <View
        android:layout_height="2dip"
        android:background="#FF909090" />
    <TableRow>
        <TextView
            android:text="@string/oct"
            android:padding="3dip" />
        <TextView
            android:text="23"
            android:padding="3dip" />
        <TextView
            android:text="@string/revolutionary"
            android:gravity="right"
            android:padding="3dip" />
    </TableRow>
    
    <View
        android:layout_height="2dip"
        android:background="#FF909090" />
        
    <TableRow>
        <TextView
            android:text="@string/dec"
            android:padding="3dip" />
        <TextView
            android:text="8"
            android:padding="3dip" />
        <TextView
            android:text="@string/kliment"
            android:gravity="right"
            android:padding="3dip" />
    </TableRow>
    
    <View
        android:layout_height="2dip"
        android:background="#FF909090" />

    <TableRow>
        <Button
        	android:text="@string/back" 
			android:id="@+id/mac_back" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:clickable="true" 
			android:gravity="center|fill"
			android:padding="10px"
			/>
    </TableRow>
</TableLayout>
</ScrollView>
