<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
<RelativeLayout android:id="@+id/relative_about" 
android:layout_width="fill_parent" 
android:layout_height="fill_parent" 
xmlns:android="http://schemas.android.com/apk/res/android" 
android:background="@drawable/about_main" >

<TextView android:id="@+id/about_naslov" 
	 android:text="@string/naslov"
	 android:layout_width="wrap_content"
	 android:layout_height="wrap_content"
	 android:textSize="23px"
	 android:textStyle="bold"
	 android:typeface="serif"
	 android:padding="5px"/>

<TextView 
	android:layout_width="wrap_content" 
	android:id="@+id/about_text" 
	android:text="@string/about_main" 
	android:layout_height="wrap_content" 
	android:layout_below="@+id/about_naslov"
	android:padding="5px"/>

<TextView 
	android:layout_width="wrap_content" 
	android:id="@+id/about_author" 
	android:text="@string/about_author" 
	android:layout_height="wrap_content" 
	android:layout_below="@+id/about_text"
	android:padding="5px"/>

<ImageButton
	android:src="@drawable/facebook"
	android:layout_width="wrap_content" 
	android:id="@+id/facebook" 
	android:layout_height="wrap_content"
	android:layout_below="@+id/about_author"
	android:layout_toLeftOf="@+id/twitter"
	android:layout_alignParentBottom="true"
	android:clickable="true"/>
	

<ImageButton
	android:src="@drawable/twitter"
	android:id="@+id/twitter" 
	android:layout_width="wrap_content" 
	android:layout_height="wrap_content" 
	android:clickable="true" 
	android:gravity="center|fill"
	android:layout_below="@+id/about_author"
	android:layout_alignParentBottom="true"
	android:layout_alignParentRight="true"/>

</RelativeLayout>
</ScrollView>